fixed alignment of subtext from squares

--- a/landingPage/styles.css
+++ b/landingPage/styles.css
@@ -117,7 +117,7 @@ button {
 
     margin-top: 10px;
     width: 30%;
-    
+    text-align: center;
 }
 
 .thirdSection {
